--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -51,7 +51,11 @@ body{
   height: 100vh;
   width: 100%;
 }
-
+h6{
+  font-family: "Poppins";
+  font-size: medium;
+  color: grey;
+}
 .section {
   background-color: rgb(63, 25, 170);
   justify-content: center;
