--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap");
 @font-face {
   font-family: Gilroy;
   src: url(../fonts/Gilroy-Regular.woff);
@@ -58,16 +59,64 @@ body{
   flex-direction: column;
   align-items: center;
 }
-h5{
-	font-size: 60px;
-	color: #fff;
-	font-family: GilroyExtraBold;
-	font-style: normal;
-  font-weight: bold;
+/* Start */
 
-  
-  
+h5 {
+  margin: 0;
+  font-size: 8em;
+  padding: 0;
+  color: white;
+  font-family: "Luckiest Guy", cursive;
+  text-shadow: 0 0.1em 20px black, 0.05em -0.03em 0 black, 0.05em 0.005em 0 black, 0em 0.08em 0 black, 0.05em 0.08em 0 black, 0px -0.03em 0 black, -0.03em -0.03em 0 black, -0.03em 0.08em 0 black, -0.03em 0 0 black;
 }
+h5 span {
+  transform: scale(0.9);
+  display: inline-block;
+}
+h5 span:first-child {
+  -webkit-animation: bop 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards infinite alternate;
+          animation: bop 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards infinite alternate;
+}
+h5 span:last-child {
+  -webkit-animation: bopB 1s 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards infinite alternate;
+          animation: bopB 1s 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards infinite alternate;
+}
+
+@-webkit-keyframes bop {
+  0% {
+    transform: scale(0.9);
+  }
+  50%, 100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes bop {
+  0% {
+    transform: scale(0.9);
+  }
+  50%, 100% {
+    transform: scale(1);
+  }
+}
+@-webkit-keyframes bopB {
+  0% {
+    transform: scale(0.9);
+  }
+  80%, 100% {
+    transform: scale(1) rotateZ(-3deg);
+  }
+}
+@keyframes bopB {
+  0% {
+    transform: scale(0.9);
+  }
+  80%, 100% {
+    transform: scale(1) rotateZ(-3deg);
+  }
+}
+
+/* end */
 .img-header{
   width: 90%;
   height: 90%;
