--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -555,6 +555,10 @@ form{
 	margin: 10px auto;
   padding: 16px;
   border-radius: 2px;
+  flex-wrap: wrap;
+  flex-direction: column ; 
+  align-items: center;
+
 }
 .form-style-6 h1{
 	background: #43D1AF;
