links added and footer altered

--- a/recipebook/css/style1.css
+++ b/recipebook/css/style1.css
@@ -1,14 +1,11 @@
-@font-face {
-  font-family: "Agustina";
-  src: url(../fonts/Agustina.woff);
-}
+
 /*CSS variable declaration for light/dark mode*/
 html[data-theme="light"] {
   --bg-mybtn: red;
   --bg-nav:black;
   --bg-nav-img: black;
-  --bg-footer:#DDE1EC;
-  --bg: #ffffff;
+  --bg-footer:rgba(99,6, 6, 0.75);
+  --bg:rgba(99,6, 6, 0.75);
   --text: #191919;
   --text-color: #6c757d;
   --col-icon: black;
@@ -38,8 +35,8 @@ html[data-theme="dark"] {
   --bg-mybtn: rgb(230, 109, 129);
   --bg-nav: #6617cb;
   --bg-nav-img: linear-gradient(315deg, #6617cb 0%, #882463 74%);
-  --bg-footer:linear-gradient(315deg, #6617cb 0%, #882463 74%);
-  --bg: #191919;
+  --bg-footer:rgba(99,6, 6, 0.75);
+  --bg: rgba(99,6, 6, 0.75);
   --text: #ffffff;
   --text-color: #fff;
   --bg-txt-img: linear-gradient(315deg, #d5adc8 0%, #ff8489 74%);
@@ -268,383 +265,3 @@ html {
   stroke-dashoffset: -134;
   stroke-width: 6;
 }
-
-/*
-------------------------
-    FOOTER SECTION
-------------------------
-*/
-
-.footer{
-  padding-top: 10px;
-  background-color:#040406;
-}
-
-.tag{
-  font-family:"Open Sans", sans-serif;
-  font: size 20px;
-  line-height: 26px;
-  text-align: center;
-  color: #fff;
-  height: 78px;
-  width: 300px;
-  margin: 5px auto;
-  display: block;
-  box-sizing: border-box;
-}
-
-
-.svg-inline--fa {
-  vertical-align: -0.200em;
-}
-
-.rounded-social-buttons .social-button {
-  display: inline-block;
-  cursor: pointer;
-  width: 3.125rem;
-  height: 3.125rem;
-  border: 0.125rem solid transparent;
-  padding: 0;
-  text-decoration: none;
-  text-align: center;
-  color: #fefefe;
-  font-size: 1.5625rem;
-  font-weight: normal;
-  line-height: 2em;
-  border-radius: 1.6875rem;
-  transition: all 0.5s ease;
-  margin-right: 0.25rem;
-  margin-bottom: 0.25rem;
-}
-
-/********
-Rotate Transition in foote Soical Icon
-*********/
-
-.rounded-social-buttons .social-button:hover, .rounded-social-buttons .social-button:focus {
-      transition: background-color 0.3s, var(--trans-props);
-}
-
-
-/*
-------------------------------
-   TWITTER MICROANIMATION
--------------------------------
-*/
-.twitter:hover #wing1{
-      transform-origin:center;
-      animation: flap 0.4s ease-out infinite alternate;
-   }	
-   
-.twitter:hover #wing2{
-    transform-origin:center;
-    animation: flap 0.4s ease-in infinite alternate;
- }		
-
-@keyframes flap{
-     50%{
-      transform:scaleX(-1) rotate(-45deg) translate(-40px,-40px);
-     }
-   }
-
-/*
------------------------------
-   LINKEDIN MICROANIMATION
------------------------------
-*/
- 
-  .linkedin:hover .linkedin-icon-footer>rect{
-    animation: rect-up 0.3s linear infinite;
-  }
-  
-  
-  @keyframes rect-up {
-    50% {
-        y:10px;
-        height:11px;
-     }
-    0%{
-        y:13px;
-        height:8px;  
-        }
-    
-  }
-  
-  .linkedin:hover .linkedin-icon-footer> circle{
-    animation: bounce 0.4s linear infinite;
-  }
-  
-  @keyframes bounce {
-    75% {
-        cy: 8px;
-     }
-     50%{
-        cy: 4px
-     }
-    0%{
-        cy:4px
-        }
-    
-  }  
-
-/*
------------------------------
-   INSTAGRAM MICROANIMATION
------------------------------
-*/   
-  
-   .st0 {
-    fill:none;
-    stroke:#EF4649;
-    stroke-width:7;
-    stroke-linecap:round;
-    stroke-miterlimit:10;
-  }
-  
-  .instagram-icon-footer:hover #littleCircle {
-    stroke-dasharray:150;
-  }
-  
-  .instagram #shutter{
-    display:none;
-  }
-  .instagram-icon-footer:hover #shutter{
-    display: block;
-    animation: shutter 1s linear infinite;
-  }
-  .instagram-icon-footer:hover #lens{
-    fill:#EF4649;
-    animation: lens 1.5s linear infinite;
-  
-  }
-  
-  @keyframes shutter {
-    0%, 50% {
-            stroke-dashoffset: 150;
-            
-        }
-    75% {
-            fill:#EF4649;
-            stroke-dashoffset: 0;
-            stroke-width:11;
-        }
-  }
-  
-  @keyframes lens {
-    0%, 75% {
-            opacity: 0;
-        }
-    100% {
-            opacity: 1;
-        }
-  }
-  
-
-/*
------------------------------
-   GITHUB MICROANIMATION
------------------------------
-*/
-.github:hover #arm {
-  transform-origin: bottom right;
-  animation: moveArm 1s infinite alternate;
-}
-
-@keyframes moveArm {
-  0% { transform: rotate(10deg); }
-  100% { transform: rotate(-10deg); }
- }
-
-
-/* twitter SVG micro animation */
-.twitter-icon-footer{
-  margin-bottom: 6px;
-  width: 35px;
-}
-  /* linkedin SVG micro animation */
-
-.linkedin-icon-footer{
-  margin-bottom: 8px;
-  width: 30px;
-}
-
-/* instagram SVG micro animation */
-
-.instagram-icon-footer{
-  width:70px;
-  padding-right: 24px;
-  padding-bottom: 8px;
-}
-
-/* github SVG Micro animation */
-.github-icon-footer{
-  margin-bottom: 8px;
-  width: 35px;
-}
-
-/*
-----------------------------------------
-   HOVER EFFECT ON SOCIAL MEDIA ICONS
-----------------------------------------
-*/
-
-.rounded-social-buttons .social-button.twitter{
-  background:white;
-}
-
-.rounded-social-buttons .social-button.twitter:hover, .rounded-social-buttons .social-button.twitter:focus {
-  color: #000;
-  background: white;
-}
-
-.rounded-social-buttons .social-button.linkedin {
-  background: white;
-}
-
-.rounded-social-buttons .social-button.linkedin:hover, .rounded-social-buttons .social-button.linkedin:focus {
-  color: #000;
-  background: white;
-}
-
-.rounded-social-buttons .social-button.instagram {
-  background: white;
-}
-
-.rounded-social-buttons .social-button.instagram:hover, .rounded-social-buttons .social-button.instagram:focus {
-  color: #000;
-  background: white;
-}
-
-.rounded-social-buttons .social-button.github{
-  background:white;
-}
-
-.rounded-social-buttons .social-button.github:hover, .rounded-social-buttons .social-button.github:focus {
-  color: #000000;
-  background: white;
-}
-
-/************ 
-  Contact Form In Footer 
-*************/
-.display{
-  height: auto;
-  width: auto;
-  text-align: left;
-  color: #fff;
-  display: inline;
-  font-size: 25px;
-  font-weight: 200;
-  line-height: 18px;
-  border-bottom: 2px solid #26a69a;
-}
-
-form{
-  margin: 15px auto;
-  color: #000;
-}
-
-/*
--------------------
-   Footer Form 
---------------------
-*/
-.form-style-6{
-	font: 95% Arial, Helvetica, sans-serif;
-	max-width: 400px;
-	margin: 10px auto;
-  padding: 16px;
-  border-radius: 2px;
-}
-.form-style-6 h1{
-	background: #43D1AF;
-	font-size: 140%;
-	font-weight: 300;
-	text-align: center;
-	color: #fff;
-	margin: -16px -16px 16px -16px;
-}
-.form-style-6 input[type="text"],
-.form-style-6 input[type="date"],
-.form-style-6 input[type="datetime"],
-.form-style-6 input[type="email"],
-.form-style-6 input[type="number"],
-.form-style-6 input[type="search"],
-.form-style-6 input[type="time"],
-.form-style-6 input[type="url"],
-.form-style-6 textarea,
-.form-style-6 select 
-{
-	-webkit-transition: all 0.30s ease-in-out;
-	-moz-transition: all 0.30s ease-in-out;
-	-ms-transition: all 0.30s ease-in-out;
-	-o-transition: all 0.30s ease-in-out;
-	outline: none;
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	width: 100%;
-	background: #fff;
-	margin-bottom: 4%;
-	border: 1px solid #ccc;
-	padding: 3%;
-	color: rgb(46, 44, 44);
-  font: 95% Arial, Helvetica, sans-serif;
-  border-radius: 2px;
-}
-.form-style-6 input[type="text"]:focus,
-.form-style-6 input[type="date"]:focus,
-.form-style-6 input[type="datetime"]:focus,
-.form-style-6 input[type="email"]:focus,
-.form-style-6 input[type="number"]:focus,
-.form-style-6 input[type="search"]:focus,
-.form-style-6 input[type="time"]:focus,
-.form-style-6 input[type="url"]:focus,
-.form-style-6 textarea:focus,
-.form-style-6 select:focus
-{
-	box-shadow: 0 0 5px #43D1AF;
-	padding: 3%;
-  border: 1px solid #43D1AF;
-  border-radius: 2px;
-}
-
-.form-style-6 input[type="submit"],
-.form-style-6 input[type="button"]{
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	width: 100%;
-	padding: 3%;
-	background: #43D1AF;
-  border-bottom: 2px solid #30C29E;
-  border-radius: 2px;
-	border-top-style: none;
-	border-right-style: none;
-	border-left-style: none;	
-  color: #fff;
-  font-size: 20px;
-}
-.form-style-6 input[type="submit"]:hover,
-.form-style-6 input[type="button"]:hover{
-	background: #2EBC99;
-}
-
-/* to make the navbar open full screen on mobile */
-    @media (max-width: 768px) {
-      .collapse navbar-collapse{
-        display: flex;
-        justify-content: center;
-      } 
-
-      .footer{
-        padding-top: 10px;
-      }
-
-      #navbar-content {
-        height: 100vh;
-        text-align: center;
-        margin:0 auto;
-        transform: translateY(25%);
-     }
-   }
