--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,9 +83,8 @@ video {
   display: block
 }
 audio{
-  margin-left: auto;
-  margin-right: auto;
-  display: block
+  margin: 0 auto; 
+  display: block;
 }
 h4{
   text-align: center;
